appling color classes to each timeblock compared to real time

--- a/index.html
+++ b/index.html
@@ -30,49 +30,49 @@
     </header>
     <div class="container">
         
-       <div class="row" id="rowNum1">
+       <div class="row" id="rowNum1" value="9" name="James">
            <label for="entername" class="col-2 time-block hour" id="label1">9AM</label>
-           <input type="text" class="col-8 description" id="text1">
+           <input type="text" class="col-8 description" id="9">
            <input type="submit" class="col-2 saveBtn" id="save1">
        </div>
        <div class="row" id="rowNum2">
             <label for="entername" class="col-2 time-block hour">10AM</label>
-            <input type="text" class="col-8 description" id="text2">
+            <input type="text" class="col-8 description" id="10">
             <input type="submit" class="col-2 saveBtn">
        </div>
        <div class="row" id="rowNum3">
             <label for="entername" class="col-2 time-block hour">11AM</label>
-            <input type="text" class="col-8 description" id="text3">
+            <input type="text" class="col-8 description" id="11">
             <input type="submit" class="col-2 saveBtn">
        </div>
        <div class="row" id="rowNum4">
             <label for="entername" class="col-2 time-block hour">12AM</label>
-            <input type="text" class="col-8 description" id="text4">
+            <input type="text" class="col-8 description" id="12">
             <input type="submit" class="col-2 saveBtn">
        </div>
         <div class="row" id="rowNum5">
             <label for="entername" class="col-2 time-block hour">1PM</label>
-            <input type="text" class="col-8 description" id="text5">
+            <input type="text" class="col-8 description" id="13">
             <input type="submit" class="col-2 saveBtn">
         </div>
         <div class="row" id="rowNum6">
             <label for="entername" class="col-2 time-block hour">2PM</label>
-            <input type="text" class="col-8 description" id="text6">
+            <input type="text" class="col-8 description" id="14">
             <input type="submit" class="col-2 saveBtn">
         </div>
         <div class="row" id="rowNum7">
             <label for="entername" class="col-2 time-block hour">3PM</label>
-            <input type="text" class="col-8 description" id="text7">
+            <input type="text" class="col-8 description" id="15">
             <input type="submit" class="col-2 saveBtn">
         </div>
         <div class="row" id="rowNum8">
             <label for="entername" class="col-2 time-block hour">4PM</label>
-            <input type="text" class="col-8 description" id="text8">
+            <input type="text" class="col-8 description" id="16">
             <input type="submit" class="col-2 saveBtn">
         </div>
         <div class="row" id="rowNum9">
             <label for="entername" class="col-2 time-block hour">5PM</label>
-            <input type="text" class="col-8 description" id="text9">
+            <input type="text" class="col-8 description" id="17">
             <input type="submit" class="col-2 saveBtn">
         </div>
      
